--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,7 @@
+PORT=3000
+MONGODB_URI=mongodb+srv://<username>:<password>@cluster0.mongodb.net/food-view?retryWrites=true&w=majority
 JWT_SECRET=a5cbd3e0ba363ea3d3edd2fac7e444eb4ce73bdd
-MONGODB_URI=mongodb://localhost:27017/food-view
 IMAGEKIT_PUBLIC_KEY=public_nur/WaHfakPX+HW5H6PgT3sQKIs=
 IMAGEKIT_PRIVATE_KEY=private_RAXnYwCIlyrlxTrspA2UWkq4EfU=
 IMAGEKIT_URL_ENDPOINT=https://ik.imagekit.io/7rfuxvaww
-NODE_ENV=development
+NODE_ENV=production
