--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 PORT=3000
-MONGODB_URI=mongodb+srv://<username>:<password>@cluster0.mongodb.net/food-view?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://dipaksamal993:dipaksamal993@cluster0.ravnt27.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=a5cbd3e0ba363ea3d3edd2fac7e444eb4ce73bdd
 IMAGEKIT_PUBLIC_KEY=public_nur/WaHfakPX+HW5H6PgT3sQKIs=
 IMAGEKIT_PRIVATE_KEY=private_RAXnYwCIlyrlxTrspA2UWkq4EfU=
